# live2mp3

./: .gitignore  build_mac_m4.sh  debug_container.sh  task.md  test_build.sh
.github/workflows/: release.yml
backend/: CMakeLists.txt  CMakeUserPresets.json  compile_commands.json  conanfile.txt  config.json  main.cc  user_config.toml
backend/.cache/clangd/index/: CommonThreadService.cpp.9DB8C88928C0D5D5.idx  CommonThreadService.h.6AA88849B2111F64.idx  ConfigService.cc.860EB2010B338B21.idx  ConfigService.h.C519D0C4B90629C9.idx  ConverterService.cc.679E29934C6526FD.idx  ConverterService.h.492F41BC50724404.idx  CoroUtils.hpp.201DE230E00FDC7D.idx  DashboardController.cc.868903368FF4D6E0.idx  DashboardController.h.3EFD15FBCF2C356B.idx  DatabaseService.cc.AC25275A490229E8.idx  DatabaseService.h.15809C716FC1E43A.idx  FfmpegTaskService.cc.300427572C0994CB.idx  FfmpegTaskService.h.049AF12FB407B60C.idx  FfmpegUtils.h.2B7A08A0B50DA26D.idx  FileBrowserController.cc.C7D690B67B6A8241.idx  FileBrowserController.h.E6A74D05FA2DC8B1.idx  FileController.cc.14737010813EFB56.idx  FileController.h.9664012436EAC180.idx  FileUtils.cc.EF934A9828E4915F.idx  FileUtils.h.16584777841708AA.idx  HistoryController.cc.C22942368D7F861D.idx  HistoryController.h.EA0A6E1B9ACBD57C.idx  HistoryService.cc.9063836DE13248F5.idx  HistoryService.h.FF2E060710DE47AF.idx  MergerService.cc.50A1F5310240C68F.idx  MergerService.h.FD246D49363396DD.idx  PendingFileService.cc.6AD6DD001EFDA182.idx  PendingFileService.h.AE8DF090802C8C84.idx  ScannerService.cc.C173E89FDE71A357.idx  ScannerService.h.F933882FE5C605D3.idx  SchedulerService.cc.116AED2E67818094.idx  SchedulerService.h.36155287BF6FF968.idx  SystemController.cc.CC25EA9B1CFB9B3B.idx  SystemController.h.44A6CE24D4BE5653.idx  ThreadSafe.hpp.8F18E841485E5385.idx  main.cc.71632BD8B94AF27F.idx
backend/controllers/: DashboardController.cc  DashboardController.h  FileBrowserController.cc  FileBrowserController.h  FileController.cc  FileController.h  HistoryController.cc  HistoryController.h  SystemController.cc  SystemController.h
backend/models/: BatchModels.h  PendingFile.h
backend/repos/: BatchTaskRepo.cc  BatchTaskRepo.h  PendingFileRepo.cc  PendingFileRepo.h
backend/services/: BatchTaskService.cc  BatchTaskService.h  CommonThreadService.cpp  CommonThreadService.h  ConfigService.cc  ConfigService.h  ConverterService.cc  ConverterService.h  DatabaseService.cc  DatabaseService.h  FfmpegTaskService.cc  FfmpegTaskService.h  HistoryService.cc  HistoryService.h  MergerService.cc  MergerService.h  PendingFileService.cc  PendingFileService.h  ScannerService.cc  ScannerService.h  SchedulerService.cc  SchedulerService.h
backend/utils/: CoroUtils.h  CoroUtils.hpp  FfmpegUtils.cc  FfmpegUtils.h  FileUtils.cc  FileUtils.h  ThreadSafe.hpp
doc/: SchedulerService_Architecture.md  backend.md  config_example.md  frontend.md  structure.md  tasks.md  usage.md  user_config_example.toml
docker/: Dockerfile
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  style.css
frontend/src/components/: ConfigPanel.vue  FileBrowserModal.vue  RootConfigModal.vue  StatusPanel.vue  ThemeToggle.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.js
frontend/src/views/: Dashboard.vue  FilesBrowser.vue  History.vue  Settings.vue
